--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <section class="menu menu2 cid-sCaOWR0CfJ" once="menu" id="menu2-0">
     <div class="row d-flex justify-content-center bg-orange top-bar p-0 m-0">
         <div class="col-auto d-flex align-items-center p-0">
-            <span class="mobile-hide text-light">Click to view our latest</span>&nbsp;<span><a (click)="openMember()" class="underline">Memberships</a>&nbsp;<span class="text-light">and</span>&nbsp;<a (click)="openOffer()" class="underline">Offers</a></span>
+            <span class="mobile-hide text-light">Click to view our latest</span>&nbsp;<span><a (click)="openMember()" class="underline">Membership</a>&nbsp;<span class="text-light">and</span>&nbsp;<a (click)="openOffer()" class="underline">Offers</a></span>
         </div>
     </div>
     <div class="row d-flex justify-content-end bg-light top-middle-bar p-0 m-0">
@@ -62,7 +62,7 @@
     </nav>
 </section>
 <!-- Navbar End-->
-<router-outlet (activate)="onActivate($event)"></router-outlet>
+<router-outlet></router-outlet>
 <!-- Footer Start-->
 <section class="footer6 cid-sDpCKlrKiV" once="footers" id="footer6-6">
     <div class="container">
