--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,12 +22,12 @@
 <!--Home Page end-->
 
 <!--Covid policy start-->
-<section class="content6 cid-sEwlHHluPT my-5" id="content6-1">
+<section class="content6 cid-sEwlHHluPT py-5" id="content6-1" style="background-color: aliceblue; margin-top: 0px !important;">
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <h3 class=" align-center my-4">
-                   <a routerLink="/covid" style="color: #fab441;line-height: 1.75;"><strong>Click here</strong></a> to read an update from Dr. Smile regarding COVID-19 safety measures and what to expect at your next appointment.
+                <h3 class=" align-center my-4 display-4">
+                   <a routerLink="/covid" fragment = "top" style="color: #fab441;line-height: 1.75;"><strong>Click here</strong></a> to read an <strong>update from Dr. Smile regarding COVID-19 safety measures</strong> and what to expect at your next appointment.
                 </h3>
             </div>
         </div>
@@ -36,18 +36,18 @@
 <!--Covid policy end-->
 
 <!--Smile makeover start-->
-<section class="content6 cid-sEwlHHluPT" id="content6-1" style="background-color: aliceblue;">
+<section class="content6 cid-sEwlHHluPT" id="content6-1" style="margin-top: 0px !important;">
     <div class="container-fluid my-5">
         <div class="row justify-content-center">
             <div class="col-auto col-lg-10">
                 <p class=" align-center my-4 display-4">
-                    Enter to win a FREE smile makeover, or nominate someone you think deserves a brand new smile!
+                    Enter to <strong>win a FREE smile makeover</strong>, or nominate someone you think deserves a brand new smile!
                 </p>
             </div>
         </div>
         <div class="row justify-content-center mb-3">
             <div class="col-auto">
-                <a class="btn btn-danger display-4 button-style" href="https://forms.gle/iFbBMZeqtaQwoeHb8" target="_blank">Learn More</a>
+                <a class="btn btn-danger display-4 button-style" href="https://form.jotform.com/212216346337047" target="_blank">Learn More</a>
             </div>
         </div>
     </div>
@@ -60,7 +60,7 @@
         <div class="row d-flex justify-content-center my-2">
             <div class="col-12 col-md-5 col-lg-5 my-2">
                 <h1 class="font-weight-bold display-3" style="color:rgba(0,0,0,0.7);font-size: 45px; line-height: 59px; font-family: 'Poppins',Helvetica,Arial,Lucida,sans-serif;">
-                    Welcome to the Dental Office of Dr. Abir Saha
+                    Welcome to the Dental Office of Dr. Abir Kumar Saha
                 </h1>
             </div>
             <div class="col-11 col-md-6 col-lg-5 my-2">
@@ -105,7 +105,7 @@
                         <div class="iconfont-wrapper mb-3">
                             <i class="far fa-check-circle"></i>
                         </div>
-                        <h5 class="card-title choose-sub-heading">Comprehensive Services</h5>
+                        <h5 class="card-title choose-sub-heading"><strong>Comprehensive Services</strong></h5>
                         <p class="card-text choose-text-normal">We’re your one-stop-shop for dental care. Whatever you’re experiencing, we have the experience, technology, and compassion to help reach your goals.</p>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                         <div class="iconfont-wrapper mb-3">
                             <i class="far fa-check-circle"></i>      
                         </div>
-                        <h5 class="card-title choose-sub-heading">Your Comfort, Our Priority</h5>
+                        <h5 class="card-title choose-sub-heading"><strong>Your Comfort, Our Priority</strong></h5>
                         <p class="card-text choose-text-normal">Enjoy a relaxing office environment, welcoming team, and soothing amenities. Plus, we offer advanced sedation options to ensure your comfort and help those with anxiety.</p>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                         <div class="iconfont-wrapper mb-3">
                             <i class="far fa-check-circle"></i>
                         </div>
-                        <h5 class="card-title choose-sub-heading">Care When You Need It</h5>
+                        <h5 class="card-title choose-sub-heading"><strong>Care When You Need It</strong></h5>
                         <p class="card-text choose-text-normal">Enjoy a relaxing office environment, welcoming team, and soothing amenities. Plus, we offer advanced sedation options to ensure your comfort and help those with anxiety.</p>
                     </div>
                 </div>
@@ -209,7 +209,7 @@
         <div class="row justify-content-center text-white">
             <div class="col-11 col-lg-6 mt-3">
                 <div class="image-wrapper">
-                    <img src="assets/images/new-patient.jpg" alt="Sr. Smile" class="image">
+                    <img src="assets/images/new-patient-v2.jpg" alt="Sr. Smile" class="image">
                 </div>
             </div>
             <div class="col-11 col-lg-6 p-0">
@@ -247,10 +247,7 @@
                 Insurance and Financing
             </h3>
             <h4 class="mbr-section-subtitle align-center mb-0 mt-3 choose-text-normal">
-                We accept insurance from Bajaj Finserv presently. No insurance? No problem. Enroll in one of our 
-                <a (click)="openMember()" class="deep-orange">memberships programs</a> or navigate through 
-                <a (click)="openOffer()" class="deep-orange">amazing offers</a>. Call 
-                <a href="tel:+919674303234" class="deep-orange">+91 9674303234</a> to learn more.
+                We accept insurance from Bajaj Finserv presently. 
             </h4>
         </div>
         <div class="row justify-content-center mt-4">
@@ -267,6 +264,12 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="row text-center d-flex justify-content-center">
+            <span class="col-10 col-10 col-lg-10 text-center">No insurance? No problem. Enroll in one of our 
+                <a (click)="openMember()" class="deep-orange">membership program</a> or navigate through 
+                <a (click)="openOffer()" class="deep-orange">amazing offers</a>. Call 
+                <a href="tel:+919674303234" class="deep-orange">+91 9674303234</a> to learn more.</span>
         </div>
     </div>
 </section>
@@ -286,13 +289,13 @@
         </div>
         <div class="row d-flex justify-content-center lead my-4">
             <div class="col-auto choose-text-normal">
-                Dr. Smile supports the community by giving back and has a community clinic at South Dum Dum Municipality Hospital.
+                Dr. Smile supports the community by giving back and visits <strong>South Dum Dum Municipality Hospital</strong> every Saturday afternoon.
                 <br>Call us at : <a href="tel:03325608387" style="color : #023E8A">03325608387</a><br>Our Website : <a href="www.sddm.ind.in" style="color : #023E8A">www.sddm.ind.in</a>
             </div>
          </div>
          <div class="row d-flex justify-content-center">
              <div class="col-11 col-md-3 col-lg-4 my-1 p-0">
-                <img src="../../assets/images/800px-South_dumdum_municipality.jpg" alt="" srcset="" height="500px" width="500px">
+                <img src="../../assets/images/Screenshot 2021-08-11 030133.png" alt="" srcset="" height="500px" width="500px">
              </div>
              <div class="col-12 col-md-6 col-lg-6 my-1">
                 <iframe width="600" height="500" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJd_juiRqe-DkRGbA3rRSsSn0&key=AIzaSyD79t-kfxeVlxdQde7oYSR7ue_rPNYkrr4"></iframe>
@@ -367,7 +370,7 @@
                 <img src="../../assets/images/membership.JPG" alt="" class="image image-responsive" style="visibility: visible;">
             </div>
             <div class="row d-flex justify-content-center">
-                <a class="btn btn-danger display-4 button-style" href="https://forms.gle/hDPpK1TQK9jSnk7B6">Register Now</a>
+                <a class="btn btn-danger display-4 button-style" href="https://form.jotform.com/212216404476046">Register Now</a>
             </div>
         </div>
       </div>
