--- a/src/app/oral/oral.component.html
+++ b/src/app/oral/oral.component.html
@@ -9,7 +9,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse142_4" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Diet and Oral Health</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong> Diet and Oral Health</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -37,7 +37,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse142_7" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Does Black Coffee affect your teeth?</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Does Black Coffee affect your teeth?</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -69,7 +69,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse142_5" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Smoking and Oral Health</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Smoking and Oral Health</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -97,7 +97,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse142_3" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Bad Breath</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Bad Breath</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -125,7 +125,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse142_6" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Brushing and Oral Health</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Brushing and Oral Health</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -164,7 +164,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse142_0" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Is Fluoride Toothpaste mandatory?</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Is Fluoride Toothpaste mandatory?</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -192,7 +192,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse142_1" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Dental Erosion</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Dental Erosion</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -220,7 +220,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse142_8" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Should your Wisdom Teeth be removed?</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Should your Wisdom Teeth be removed?</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -247,7 +247,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse142_10" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Oral Healthcare of Children</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Oral Healthcare of Children</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -275,7 +275,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse142_9" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Why SMILING Is Good for Your Health?!</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Why SMILING Is Good for Your Health?!</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -302,7 +302,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse142_2" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Oral Cancer</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Oral Cancer</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
