--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -9,7 +9,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse14_0" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Restoration/Filling</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Restoration/Filling</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -37,7 +37,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse14_7" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Root Canal Treatment(RCT)</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Root Canal Treatment(RCT)</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -65,7 +65,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse14_5" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Scaling/Cleaning</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Scaling/Cleaning</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -93,7 +93,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse14_3" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Extraction</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Extraction</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -127,7 +127,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse14_4" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Dentures</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Dentures</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -160,7 +160,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse14_cr" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Crown and Bridge</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Crown and Bridge</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -189,7 +189,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse14_1" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Implant Dentistry</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Implant Dentistry</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -223,7 +223,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse14_8" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Orthodontic Treatment</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Orthodontic Treatment</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -256,7 +256,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse14_10" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Cosmentic Dentistry</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Cosmentic Dentistry</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
@@ -288,7 +288,7 @@
                     <div class="card mb-3">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed" data-toggle="collapse" data-core="" href="#collapse14_9" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading">Pediatric Dentistry</h6>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7 choose-sub-heading"><strong>Pediatric Dentistry</strong></h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
                         </div>
