--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -3,79 +3,103 @@
     <div class="container-fluid p-0" id="head">
         <div class="row d-flex justify-content-center mt-3">
             <div class="col-auto heading-main px-5" id="head">
-                Meet The Team
+               <strong>
+                Meet our Skilled and Empathetic doctors' team ...
+               </strong>
             </div>
         </div>
-        <div class="row d-flex justify-content-center my-5">
-            <div class="col-12 col-md-6 col-lg-2 p-0 my-2 mx-2 d-flex justify-content-center">
+        <div class="row d-flex justify-content-center mt-5 mb-2">
+            <div class="col-12 col-md-6 col-lg-3 p-0 my-2 d-flex justify-content-center">
                 <div class="card pc-hide" style="width: 17rem;">
-                    <img src="../../assets/images/avatar.png" class="card-img-top mt-2 img-thumbnail mx-auto" alt="Dr. Smile" style="height:300px; width:240px;">
+                    <img src="../../assets/images/avatar.png" class="card-img-top mt-2 img-thumbnail mx-auto mt-3" alt="Dr. Smile" style="height:300px; width:240px;">
                     <div class="card-body">
-                        <h5 class="card-title">Dr. Abir Saha</h5>
-                        <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Georama',sans-serif;">BDS (WBHUS)</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title"><strong>Dr. Abir Kumar Saha</strong></h5>
+                        <h6 class="card-subtitle mb-2 text-dark gap">BDS [WBUHS]</h6>
+                        <h6 class="card-subtitle mb-2 text-dark gap">Consultant Oral & Dental Surgeon</h6>
+                        <h6 class="card-subtitle mb-2 text-dark gap">Reg No. : 4503-A</h6>
+                        
+                        <p class="card-text"><em>"I value my relationships with each and every patient. My goal is to understand your concerns and provide you with the highest quality care."</em></p>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-2 p-0 my-2 mx-2 d-flex justify-content-center">
+            <div class="col-12 col-md-6 col-lg-3 p-0 my-2 d-flex justify-content-center">
                 <div class="card pc-hide d-flex justify-content-center" style="width: 17rem;">
-                    <img src="../../assets/images/namrata.jpg" class="card-img-top mt-2 img-thumbnail mx-auto mt-3" alt="Dr. Smile" style="height:300px; width:240px;">
+                    <img src="../../assets/images/avatar-girl.png" class="card-img-top mt-2 img-thumbnail mx-auto mt-3" alt="Dr. Smile" style="height:300px; width:240px;">
                     <div class="card-body">
-                        <h5 class="card-title">Dr. Namrata Datta</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">BDS (MANIPAL)</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title"><strong>Dr. Namrata Datta</strong></h5>
+                        <h6 class="card-subtitle mb-2 text-dark gap">BDS, FAGE [MANIPAL]</h6>
+                        <h6 class="card-subtitle mb-2 text-dark gap">Consultant Oral & Dental Surgeon</h6>
+                        <h6 class="card-subtitle mb-2 text-dark gap">Reg No. : 7374-A</h6>
+                        
+                        <p class="card-text"><em>"I want to give you the confidence to smile big knowing you have healthy, beautiful teeth. <br> SMILE ~ it raises your face value"</em></p>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-2 p-0 my-2 mx-2 d-flex justify-content-center">
+            <div class="col-12 col-md-6 col-lg-3 p-0 my-2 d-flex justify-content-center">
+                <div class="card pc-hide d-flex justify-content-center" style="width: 17rem;">
+                    <img src="../../assets/images/rajasri.PNG" class="card-img-top mt-2 img-thumbnail mx-auto mt-3" alt="Dr. Smile" style="height:300px; width:240px;">
+                    <div class="card-body">
+                        <h5 class="card-title"><strong>Dr. Rajarshi Bandyopadhyay</strong></h5>
+                        <h6 class="card-subtitle mb-2 text-dark gap">BDS, MDS (Oral and Maxillofacial Surgery) [WBUHS]</h6>
+                        <h6 class="card-subtitle mb-2 text-dark gap">FMC [Germany]</h6>
+                        <h6 class="card-subtitle mb-2 text-dark gap">Consultant Oral & Maxillofacial Surgeon</h6>
+                        <h6 class="card-subtitle mb-2 text-dark gap">Reg No. : 4284-A</h6>
+                        <p class="card-text"><em>"I specialise in dentistry and medicine to bring you surgical excellence. Your smile may be the brightest part of someone's day, so wear it often and share it freely."</em></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-3 p-0 my-2 d-flex justify-content-center">
                 <div class="card pc-hide" style="width: 17rem;">
                     <img src="../../assets/images/shubham.jpg" class="card-img-top mt-2 img-thumbnail mx-auto mt-3" alt="Dr. Smile" style="height:300px; width:210px;">
                     <div class="card-body">
-                        <h5 class="card-title">Dr. Shubham Banerjee</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Intern, Dr. Smile</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title"><strong>Dr. Shubham Banerjee</strong></h5>
+                        <h6 class="card-subtitle mb-2 text-dark gap">BDS [WBUHS]</h6>
+                        <h6 class="card-subtitle mb-2 text-dark gap">Consultant Oral & Dental Surgeon</h6>
+                        <h6 class="card-subtitle mb-2 text-dark gap">Reg No. : 6951-A</h6>
+                        <p class="card-text"><em>"I say, Dentistry is not expensive, Neglect is.  <br> Don't wait untill you loose one tooth to realize how precious your pearly whites are."</em></p>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-2 p-0 my-2 mx-2 d-flex justify-content-center">
+            <div class="col-12 col-md-6 col-lg-3 p-0 my-2 d-flex justify-content-center">
                 <div class="card pc-hide" style="width: 17rem;">
                     <img src="../../assets/images/avatar.png" class="card-img-top mt-2 img-thumbnail mx-auto" alt="Dr. Smile" style="height:300px; width:240px;">
                     <div class="card-body">
-                        <h5 class="card-title">Dr. Budhaditya De</h5>
-                        <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Georama',sans-serif;">BDS (WBHUS)</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title"><strong>Dr. Budhaditya De</strong></h5>
+                        <h6 class="card-subtitle mb-2 text-dark gap">BDS, MDS (Oral Pathology & Microbiology) [WBUHS]</h6>
+                        <h6 class="card-subtitle mb-2 text-dark gap">Consultant Oral Cancer Specialist</h6>
+                        <h6 class="card-subtitle mb-2 text-dark gap">Reg No. : 4769-A-A</h6>
+                        <p class="card-text"><em>"Whoever said WINNING  isn't everything, obviously never had CANCER. <br> I help patients to beat it."</em></p>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-2 p-0 my-2 mx-2 d-flex justify-content-center">
+            <div class="col-12 col-md-6 col-lg-3 p-0 my-2 d-flex justify-content-center">
                 <div class="card pc-hide" style="width: 17rem;">
                     <img src="../../assets/images/avatar.png" class="card-img-top mt-2 img-thumbnail mx-auto" alt="Dr. Smile" style="height:300px; width:240px;">
                     <div class="card-body">
-                        <h5 class="card-title">Dr. Sukanta Seal</h5>
-                        <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Georama',sans-serif;">BDS (WBHUS)</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title"><strong>Dr. Sukanta Seal</strong></h5>
+                        <h6 class="card-subtitle mb-2 text-dark gap">BDS, MDS (Orthodontics and Dentofacial Othopaedics) [WBUHS]</h6>
+                        <h6 class="card-subtitle mb-2 text-dark gap">Consultant Ortodontist</h6>
+                        <h6 class="card-subtitle mb-2 text-dark gap">Reg No. : 2935-A</h6>
+                        <p class="card-text"><em>"Smiling is the best way to face every problem, to crush every fear and to hide every pain <br> Wearing BRACES makes HAPPY faces "</em></p>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-2 p-0 my-2 mx-2 d-flex justify-content-center">
+            <div class="col-12 col-md-6 col-lg-3 p-0 my-2 mx-2 d-flex justify-content-center">
                 <div class="card pc-hide" style="width: 17rem;">
-                    <img src="../../assets/images/IMG-20210808-WA0035 (1).jpg" class="card-img-top mt-2 img-thumbnail mx-auto" alt="Dr. Smile" style="height:300px; width:240px;">
+                    <img src="../../assets/images/avatar-girl.png" class="card-img-top mt-2 img-thumbnail mx-auto" alt="Dr. Smile" style="height:300px; width:240px;">
                     <div class="card-body">
-                        <h5 class="card-title">Dr. Debarati Deb</h5>
-                        <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Georama',sans-serif;">BDS (WBHUS)</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title"><strong>Dr. Debarati Deb</strong></h5>
+                        <h6 class="card-subtitle mb-2 text-dark gap">BDS, MDS (Oral Medicine & Radiology) [WBUHS]</h6>
+                        <h6 class="card-subtitle mb-2 text-dark gap">Consultant Oral Radiologist</h6>
+                        <h6 class="card-subtitle mb-2 text-dark gap">Reg No. : 4338-A</h6>
+                        <p class="card-text"><em>" I love being a dentist, because it is very hands on. I get to be artistic and help my patients look and feel great."</em></p>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-2 p-0 my-2 mx-2 d-flex justify-content-center">
-                <div class="card pc-hide" style="width: 17rem;">
-                    <img src="../../assets/images/rajasri.PNG" class="card-img-top mt-2 img-thumbnail mx-auto" alt="Dr. Smile" style="height:300px; width:240px;">
-                    <div class="card-body">
-                        <h5 class="card-title">Dr. Rajarshi Bandyopadhyay</h5>
-                        <h6 class="card-subtitle mb-2 text-muted" style="font-family: 'Georama',sans-serif;">BDS (WBHUS)</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
+        </div>
+        <div class="row d-flex justify-content-center mt-2 mb-2">
+            <div class="col-auto display-7 text-center">
+                Always check if your DENTIST is a registered professional. To check the registration of your Denitst <a href="https://www.wbdc.org.in/search.php" class="deep-orange">Click Here</a>. <br> <span style="text-transform: uppercase;">Don't be ignorant, always be Aware !!</span>
             </div>
         </div>
     </div>
